<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_below="@id/nameDataInput_container">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">
    <android.support.v7.widget.AppCompatEditText
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:id="@+id/ed_userMail"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint_text"
        android:textColorHint="@color/pureWhiteColor"
        android:textColor="@color/pureWhiteColor"
        app:backgroundTint="@color/pureWhiteColor"/>
    <android.support.v7.widget.AppCompatEditText
        android:inputType="phone"
        android:imeOptions="actionNext"
        android:id="@+id/ed_userPhone"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint_text"
        android:textColorHint="@color/pureWhiteColor"
        android:textColor="@color/pureWhiteColor"
        app:backgroundTint="@color/pureWhiteColor"/>
</LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <android.support.v7.widget.AppCompatEditText
            android:inputType="textPostalAddress"
            android:imeOptions="actionNext"
            android:id="@+id/ed_userAddress"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Address_hint_text"
            android:textColorHint="@color/pureWhiteColor"
            android:textColor="@color/pureWhiteColor"
            app:backgroundTint="@color/pureWhiteColor"/>
        <Spinner
            android:popupBackground="@color/holoSpaceGrey"
            android:id="@+id/sp_marital_status"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Spinner
            android:popupBackground="@color/holoSpaceGrey"
            android:id="@+id/sp_nationality"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatEditText
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:id="@+id/ed_employeerName"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/employeerName_hint_text"
            android:textColorHint="@color/pureWhiteColor"
            android:textColor="@color/pureWhiteColor"
            app:backgroundTint="@color/pureWhiteColor"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:layout_marginTop="10dp"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:id="@+id/ed_engagementData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/engagData_hint_text"
        android:textColorHint="@color/pureWhiteColor"
        android:textColor="@color/pureWhiteColor"
        app:backgroundTint="@color/pureWhiteColor"/>
</LinearLayout>