<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >

    <ImageView
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/page_1"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/page_1_2"
        android:layout_gravity="bottom"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.askerlap.emad.logintaskprocab.Activities.MainActivity">

            <ImageView
                android:id="@+id/profile_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:layout_marginTop="67dp"
                android:src="@drawable/group_4"/>

            <TextView
                android:id="@+id/tv_permission_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_budget"
                android:textSize="26sp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/nessary_to_login_text"
                android:textColor="@color/pureWhiteColor"
                android:gravity="center"/>
            <TextView

                android:id="@+id/tv_permission_mesg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_permission_title"
                android:textSize="20sp"
                android:textColor="@color/pureWhiteColor"
                android:gravity="center_horizontal"
                android:text="@string/visa_mesg_text"
                android:fontFamily="@font/roboto_right"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_permission_mesg"
                android:layout_margin="20dp"
                android:background="@color/pureWhiteColor"
                android:fontFamily="@font/roboto_right"
                android:text="@string/LoginOrResg_text"
                android:textAllCaps="false"
                android:textColor="@color/gradientColorFirst"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>



</FrameLayout>