<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:id="@+id/second_visaData_container"
    android:layout_below="@id/BirthData_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <android.support.v7.widget.AppCompatEditText
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/ed_issuePlace"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/issuePlace_hint_text"
            android:textColorHint="@color/pureWhiteColor"
            android:textColor="@color/pureWhiteColor"
            app:backgroundTint="@color/pureWhiteColor"/>
        <android.support.v7.widget.AppCompatEditText
            android:inputType="date"
            android:imeOptions="actionNext"
            android:id="@+id/ed_issueDate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/issueDate_hint_text"
            android:textColorHint="@color/pureWhiteColor"
            android:textColor="@color/pureWhiteColor"
            app:backgroundTint="@color/pureWhiteColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <android.support.v7.widget.AppCompatEditText
            android:inputType="date"
            android:imeOptions="actionNext"
            android:id="@+id/ed_passExpireDate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/expireDate_hint_text"
            android:textColorHint="@color/pureWhiteColor"
            android:textColor="@color/pureWhiteColor"
            app:backgroundTint="@color/pureWhiteColor"/>
        <android.support.v7.widget.AppCompatEditText
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:id="@+id/ed_cidNumber1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cidNumber_hint_text"
            android:textColorHint="@color/pureWhiteColor"
            android:textColor="@color/pureWhiteColor"
            app:backgroundTint="@color/pureWhiteColor"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:id="@+id/ed_cidNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cidNumber_hint_text"
        android:textColorHint="@color/pureWhiteColor"
        android:textColor="@color/pureWhiteColor"
        app:backgroundTint="@color/pureWhiteColor"/>

</LinearLayout>